welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:20: error: ';' expected but 'return' found.
	} return false
          ^